# autoware.privately-owned-vehicles

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ONBOARDING.md  README.md  requirements.txt
AutoSeg/: README.md
CoarseSeg/: README.md
CoarseSeg/create_masks/ACDC/: process_acdc.py
CoarseSeg/create_masks/BDD100K/: process_bdd100k.py
CoarseSeg/create_masks/IDDAW/: README.md
CoarseSeg/create_masks/MUSES/: process_muses.py
CoarseSeg/create_masks/Mapillary_Vistas/: README.md
CoarseSeg/create_masks/comma10K/: process_comma10k.py
CoarseSeg/pytorch/: neck.py  seg_head.py  train.py
CoarseSeg/pytorch/data_utils/: README.md  augmentations.py  load_acdc.py
CoarseSeg/pytorch/model_components/: neck.py
CoarseSeg/scripts/: README.md
DomainSeg/: README.md
DomainSeg/create_masks/: README.md
DriveSeg/: README.md
DriveSeg/create_masks/: README.md
EgoLanes/: README.md  requirements.txt
EgoLanes/create_lane/: README.md
EgoPath/: README.md  requirements.txt
EgoPath/create_path/: README.md
EgoSpace/: README.md
LaneDet/: README.md
LaneDet/create_lane/: README.md
Models/: .gitignore  README.md  requirements.txt  train_scene_seg.py
Models/data_utils/: README.md  augmentations.py  benchmark.py  check_data.py  lidar_depth_fill.py  load_data.py  load_data_auto_steer.py  load_data_domain_seg.py  load_data_ego_path.py  load_data_ego_path_bev.py  load_data_scene_3d.py  load_data_scene_seg.py  load_data_super_depth.py  load_ego_path_data.py  manual_audit_app.py  model_speed.py  model_summary.py
Models/exports/: README.md  traced_script_module_save.py
Models/exports/libtorch/: CMakeLists.txt  README.md  main.cpp
Models/exports/onnx_rt/: CMakeLists.txt  README.md  main.cpp
Models/inference/: README.md  domain_seg_infer.py  scene_3d_infer.py  scene_seg_infer.py
Models/model_components/: README.md  auto_steer_network.py  bev_path_context.py  coarse_seg.py  context.py  depth_context.py  depth_neck.py  depth_supervision.py  domain_seg_head.py  domain_seg_network.py  domain_seg_upstream.py  ego_lanes_head.py  ego_lanes_network.py  ego_path_head.py  ego_path_network.py  ego_space_head.py  ego_space_network.py  ego_space_upstream.py  ego_steer_network.py  neck.py  path_context.py  pre_trained_backbone.py  scene_3d_head.py  scene_3d_neck.py  scene_3d_network.py  scene_3d_upstream.py  scene_context.py  scene_context_lite.py  scene_context_tiny.py  scene_neck.py  scene_neck_lite.py  scene_neck_tiny.py  scene_seg.py  scene_seg_head.py  scene_seg_network_lite.py  scene_seg_network_tiny.py  seg_head.py  super_depth_head.py  super_depth_network.py  super_depth_upstream.py
Models/quantize_components/: .gitignore  README.md  backbone.py  benchmark_qat_model.py  scene_seg_network.py  train_scene_seg_qat.py
Models/training/: README.md  auto_steer_trainer.py  domain_seg_trainer.py  ego_path_trainer.py  ego_path_trainer_bev.py  ego_space_trainer.py  scene_3d_trainer.py  scene_seg_trainer.py  super_depth_trainer.py  test_and_validate_super_depth.py  test_validate_scene_3d.py  test_validate_scene_seg.py  train_auto_steer.py  train_domain_seg.py  train_ego_path.py  train_ego_path_bev.py  train_scene_3d.py  train_scene_seg.py  train_super_depth.py
Models/visualizations/: .gitgnore  .gitignore  README.md  image_visualization.py  video_visualization.py
PathDet/: README.md
PathDet/create_path/: README.md  dataset_playground.ipynb
PathFinder/: .gitignore  CMakeLists.txt  README.md
PathFinder/include/: estimator.hpp  path_finder.hpp
PathFinder/scripts/: README.md  calc_img_to_world.py
PathFinder/src/: estimator.cpp  path_finder.cpp
PathFinder/test/: README.md  image_to_world_transform.yaml  test.yaml
Scene3D/: README.md  requirements.txt
Scene3D/create_metric_depth/: README.md
Scene3D/create_relative_depth/: README.md
SceneSeg/: README.md  requirements.txt
SceneSeg/create_masks/: README.md
Simulation/: README.md
Simulation/CARLA/: README.md
Simulation/CARLA/ROS2/src/odom_publisher/: README.md  package.xml
Simulation/CARLA/ROS2/src/odom_publisher/odom_publisher/: pub_odom_node.py
Simulation/CARLA/ROS2/src/waypoints_publisher/: package.xml  setup.cfg
SuperDepth/: README.md
SuperDepth/create_depth/: README.md
VisionPilot/: README.md
VisionPilot/ROS2/AUTOSEG/DOMAIN_SEG/: .gitignore  CMakeLists.txt  README.md  package.xml
VisionPilot/ROS2/AUTOSEG/DOMAIN_SEG/include/: domain_seg.hpp  domain_seg_node.hpp  inference_backend.hpp  onnx_runtime_backend.hpp  tensorrt_backend.hpp
VisionPilot/ROS2/AUTOSEG/DOMAIN_SEG/launch/: domain_seg.launch.py  test_pipeline.launch.py
VisionPilot/ROS2/AUTOSEG/DOMAIN_SEG/src/: domain_seg.cpp  domain_seg_node.cpp  onnx_runtime_backend.cpp  tensorrt_backend.cpp
VisionPilot/ROS2/AUTOSEG/SCENE3D/: .gitignore  CMakeLists.txt  README.md  package.xml
VisionPilot/ROS2/AUTOSEG/SCENE3D/include/: inference_backend.hpp  onnx_runtime_backend.hpp  scene3d.hpp  scene3d_node.hpp  tensorrt_backend.hpp
VisionPilot/ROS2/AUTOSEG/SCENE3D/launch/: scene3d.launch.py  test_pipeline.launch.py
VisionPilot/ROS2/AUTOSEG/SCENE3D/scripts/: video_publisher.py
VisionPilot/ROS2/AUTOSEG/SCENE3D/src/: onnx_runtime_backend.cpp  scene3d.cpp  scene3d_node.cpp  tensorrt_backend.cpp
VisionPilot/ROS2/AUTOSEG/SCENE_SEG/: .gitignore  CMakeLists.txt  README.md  package.xml
VisionPilot/ROS2/AUTOSEG/SCENE_SEG/include/: inference_backend.hpp  onnx_runtime_backend.hpp  scene_seg.hpp  scene_seg_node.hpp  tensorrt_backend.hpp
VisionPilot/ROS2/AUTOSEG/SCENE_SEG/launch/: scene_seg.launch.py  test_pipeline.launch.py
VisionPilot/ROS2/AUTOSEG/SCENE_SEG/scripts/: video_publisher.py
VisionPilot/ROS2/AUTOSEG/SCENE_SEG/src/: onnx_runtime_backend.cpp  scene_seg.cpp  scene_seg_node.cpp  tensorrt_backend.cpp
VisionPilot/ROS2/PATHFINDER/: CMakeLists.txt  package.xml
VisionPilot/ROS2/PATHFINDER/include/PATHFINDER/: estimator.hpp
VisionPilot/ROS2/PATHFINDER/src/: estimator.cpp  pathfinder_node.cpp
VisionPilot/ZENOH/: README.md
scripts/: process_muses.py  train.py
scripts/create_masks/: process_acdc.py  process_iddaw.py
(+171 files in other folders)
