<?xml version="1.0"?>
<package format="3">
  <name>waypoints_publisher</name>
  <version>0.1.0</version>
  <description>waypoints_publisher</description>

  <maintainer email="limjitern@gmail.com">JITERN</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>autoware_planning_msgs</exec_depend>
  <exec_depend>carla</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
